Config Rework 99% Game and GameUI almost done